public/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  list-style: none;
  text-decoration: none;
  font-weight: 400;
}
:root {
  --main-clr: #13073d;
  --secondary-clr: #430791;
  --tertiary-clr: #7c0dd1;
  --accent-clr: #9d36e1;
  --white-clr: #fff;
  font-size: 62.5%;
  scroll-behavior: smooth;
}
body {
  overflow-x: hidden;
  text-align: center;
  display: flex;
  flex-direction: column;
  height: 100%;
  font-family: "Bodoni Moda", serif;
  color: var(--white-clr);
  background-color: var(--main-clr);
  line-height: 1.5;
}
a {
  color: var(--white-clr);
  cursor: pointer;
}
a:hover,
a:focus {
  color: var(--accent-clr);
}
h1 {
  font-size: clamp(2.3rem, 5vw, 4rem);
}
h2,
.btn {
  font-size: clamp(1.8rem, 4vw, 3rem);
}
h3 {
  font-size: clamp(1.6rem, 1.7vw, 2.5rem);
}
p,
li,
a,
input,
textarea,
label {
  font-size: clamp(1.4rem, 1.5vw, 2.5rem);
}
input,
textarea {
  font-size: clamp(1.2rem, 1.3vw, 2.2rem);
}
/* Utility Classes */
.bold {
  font-weight: 700;
}
.absolute {
  position: absolute;
  top: 40vh;
  right: 10vw;
}
.center {
  text-align: center;
}
.btn {
  padding: 1rem 3rem;
  cursor: pointer;
  background-color: var(--secondary-clr);
  color: var(--white-clr);
  border: 1px solid #888;
}
.btn:hover,
.btn:focus {
  background-color: var(--accent-clr);
  color: #fff;
  border: 1px solid #555;
}
.container {
  margin: 0 5vw;
}
#scrollTop {
  opacity: 0;
  cursor: default;
  position: fixed;
  top: 70%;
  right: 7%;
  transition: opacity 1s;
  color: var(--accent-clr);
}
#scrollTop:hover {
  color: var(--secondary-clr);
}
#theme {
  display: none;
}
header {
  text-transform: capitalize;
  margin: 1rem 0;
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
}
#logo img {
  width: max(3rem, 4vw);
  margin-right: 1rem;
}
nav a {
  padding: 0.5rem 1rem;
}
#logo {
  display: flex;
  justify-content: center;
  align-items: flex-end;
}
#hero {
  min-height: 100vh;
}
#hero .big-img {
  background-color: var(--main-clr);
  min-height: 100vh;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: -1;
}
#hero .absolute {
  top: 2rem;
}
#hero .absolute.grid:last-child {
  grid-template-rows: var(--large-circle-size) calc(
      var(--medium-circle-size) + var(--small-circle-size)
    );
}
#hero .text {
  place-self: center center;
}
#hero .text h2 {
  margin-top: 1rem;
}
.cta {
  place-self: center center;
  display: flex;
  flex-direction: column;
}
.cta .btn:nth-child(2) {
  background-color: transparent;
}
.cta .btn:nth-child(2):hover {
  background-color: transparent;
}
.grid {
  margin-top: 5rem;
  --large-circle-size: 60vw;
  --medium-circle-size: calc(var(--large-circle-size) * 0.674);
  --small-circle-size: calc(var(--large-circle-size) * 0.52);
  display: grid;
  grid-template-columns: calc(
    var(--large-circle-size)+ (var(--medium-circle-size) / 2)+
      (var(--small-circle-size) / 2)
  );
  grid-template-rows: var(--large-circle-size) var(--medium-circle-size) var(
      --small-circle-size
    );
  grid-row-gap: min(
    calc(
      92vh - 8rem - var(--large-circle-size) - var(--medium-circle-size) -
        var(--small-circle-size)
    ),
    10rem
  );
  right: 50%;
  transform: translateX(50%);
}
.large {
  height: var(--large-circle-size);
  place-self: center center;
}
.medium {
  height: var(--medium-circle-size);
  place-self: center flex-start;
}
.small {
  height: var(--small-circle-size);
  place-self: center flex-end;
}
@media (orientation: landscape) {
  .grid {
    margin-top: 10rem;
    --large-circle-size: 48vh;
    --medium-circle-size: calc(var(--large-circle-size) * 0.674);
    --small-circle-size: calc(var(--large-circle-size) * 0.52);
    grid-template-columns:
      calc((var(--large-circle-size) / 2) + (var(--medium-circle-size) / 2))
      calc((var(--large-circle-size) / 2) + (var(--small-circle-size) / 2));
    grid-template-rows: var(--large-circle-size) var(--medium-circle-size);
    grid-row-gap: 0;
    right: 5vw;
    transform: none;
  }
  #hero .absolute.grid:last-child {
    grid-template-columns: 80vw;
    grid-template-rows: var(--large-circle-size) var(--medium-circle-size);
    left: 5vw;
  }
  #hero .text {
    place-self: center flex-start;
    text-align: left;
  }
  .cta {
    place-self: center flex-start;
    display: flex;
    flex-direction: row;
  }
  .large {
    height: var(--large-circle-size);
    place-self: center center;
    grid-column: 1/3;
  }
  .medium {
    height: var(--medium-circle-size);
    place-self: center flex-start;
    grid-row: 2/3;
  }
  .small {
    height: var(--small-circle-size);
    place-self: center flex-end;
    grid-row: 2/3;
  }
}
main {
  flex: 1 0 auto;
  z-index: 5;
}
#portfolio {
  overflow:hidden;
  padding: 2rem 0;
  background-color: #000;
}
#portfolio h1 {
  margin-bottom: 1rem;
}
#portfolio .container {
  display: flex;
  position: relative;
  height: calc(60vw / 1.73 + 5rem);
  margin: 0;
  /* scroll-snap-type: x mandatory; */
  --device:mobile;
  overflow-x: auto;

}
.mySlides{
  transition: transform .5s ease-out;
  /* scroll-snap-align: start;
  scroll-snap-stop: always; */
}
.mySlides {
  /* commenting this causes the error (The position), the error of the second vid not working and the first not repeating */
  position: absolute; 
  overflow: hidden;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  visibility: hidden;
  opacity: 0;
  transition: visibility 0s, opacity 0.5s linear;
}
.appear {
  visibility: visible;
  opacity: 1;
}
.slider a:first-child {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 90vw;
  margin: 0 5vw;

}
.prev,
.next {
  display: none;
}
/* For desktop, we don't do swipes */
/* @media (hover: hover) { */
  #portfolio .container {
    display: block; 
    /* scroll-snap-type:none; */
    overflow: auto;
    --device:desktop;

  }
  .mySlides {
    /* commenting this causes the error (The position), the error of the second vid not working and the first not repeating */
    position: absolute; 
    top: 0;
    left: 0;
    right: 0;
    visibility: hidden;
    opacity: 0;
    transition: visibility 0s, opacity 0.5s linear;
  }
  .appear {
    visibility: visible;
    opacity: 1;
  }
  .prev,
  .next {
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
    top: 0;
    background-color: rgba(71, 4, 75, 0.3);
    height: 100%;
    border-radius: 5px;
  }
  .prev:hover,
  .next:hover {
    background-color: rgba(71, 4, 75, 0.5);
  }
  .prev {
    left: 0;
  }
  .next {
    right: 0;
  }
  .prev span,
  .next span {
    margin: 0 20px;
  }
/* } */
/* Considering the aspect ratio of both videos so that they can have equal height */
.desktop video,
.desktop img {
  width: 60vw;
}
/* Divide the width by 1.73 (the aspect ratio of desktop videos) to get approximate height */
.desktop img {
  height: calc(60vw / 1.73);
}
/* Multiply the width by .313 (trial and error) to get equal heights */
.mobile video,
.mobile img {
  width: calc(60vw * 0.313);
}
.websiteTitle {
  display: block;
  margin-top: 1rem;
  margin-bottom: 1rem;
}
#about .container {
  position: relative;
  left: 45%;
  transform: translateX(-50%);
  max-width: clamp(500px, 80%, 800px);
  margin: 0 5vw;
  text-align: left;
  padding: 5rem 0;
  font-family: "Robot", serif;
}
#about h2 {
  margin: 3rem 0 1rem 0;
}
#about p {
  font-size: clamp(1.2rem, 1.3vw, 2.3rem);
}
#aboutMe {
  display: flex;
  column-gap: clamp(10px, 5vw, 60px);
  align-items: center;
}
#about img {
  height: calc(clamp(2rem, 5vw, 2.5rem) * 8);
}
#about a {
  text-decoration: underline;
}
.lets {
  font-size: 120%;
}
#contact {
  color: var(--white-clr);
  background-color: #000;
}
#contact .logoImg {
  width: max(5rem, 6vw);
  align-self: center;
  margin-bottom: 0.5rem;
}
.contactForm {
  width: min(100%, 500px);
  margin: 0 auto 5rem auto;
}
#contact form {
  background-color: var(--main-clr);
  display: flex;
  flex-direction: column;
  text-align: left;
  padding: 2rem;
}
#contact h2 {
  padding: 5vh 0;
}
#contact div {
  display: flex;
  flex-direction: column;
  padding-bottom: 2rem;
}
.suggestionPara,
.errorPara {
  display: none;
  font-size: 1.2em;
}
.errorPara {
  color: red;
}
.suggestionPara {
  text-align: right;
}
.suggested {
  text-decoration: underline;
  cursor: pointer;
}
.suggested:hover {
  color: #bbb;
}
input,
textarea {
  font-family: "Bodoni Moda", serif;
  color: #fff;
  background-color: var(--secondary-clr);
  border: 2px solid var(--tertiary-clr);
  margin-top: 0.3rem;
  padding: 0.5rem;
}
input:focus,
textarea:focus {
  border-color: var(--secondary-clr);
  background-color: var(--accent-clr);
}
#email {
  margin-bottom: 0.3rem;
}
#submit {
  margin-top: 5rem;
}
.contactConfirmation {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 3;
  background-color: rgba(0, 0, 0, 07);
}
.contactConfirmation div {
  position: relative;
  margin: 50vh auto 0 auto;
  width: min(90vw, 500px);
  transform: translateY(-50%);
  background-color: var(--main-clr);
  color: var(--white-clr);
  border-radius: 10px;
  padding: 3rem;
}
.contactConfirmation .icon-check-circle-o {
  font-size: min(20rem, 30vh);
  color: var(--accent-clr);
}
.contactConfirmation .btn {
  margin: 1rem 0;
  border: none;
}
.socialMedia {
  display: flex;
  flex-direction: column;
  text-align: left;
}
#contact .separator {
  display: block;
  text-align: center;
  position: relative;
  margin-bottom: 1rem;
  font-size: 1.8em;
}
#contact .separator::after {
  content: "";
  position: absolute;
  height: 2px;
  width: 35vw;
  background-color: #fff;
  top: 50%;
  right: 0;
}
#contact .separator::before {
  content: "";
  position: absolute;
  height: 2px;
  width: 35vw;
  background-color: #fff;
  top: 50%;
  left: 0;
}
.socialMedia {
  margin-bottom: 5rem;
  font-family: "Robot", serif;
}
.socialMedia h3 {
  margin-bottom: 0.5rem;
}
.socialMedia a {
  margin: 0.5rem 0;
  font-size: clamp(1.3rem, 1.3vw, 2.3rem);
}
footer {
  flex-shrink: 0;
  padding: 2rem;
}
@font-face {
  font-family: "icomoon";
  src: url(./assets/icons/icomoon.eot);
  src: url(./assets/icons/icomoon.eot) format("embedded-opentype"),
    url(./assets/icons) format("truetype"),
    url(./assets/icons/icomoon.woff) format("woff"),
    url(./assets/icons/icomoon.svg) format("svg");
  font-weight: 400;
  font-style: normal;
  font-display: block;
}
[class^="icon-"],
[class*=" icon-"] {
  font-family: "icomoon" !important;
  font-style: normal;
  font-weight: 400;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
.icon-arrow-right:before {
  content: "\e906";
}
.icon-arrow-left:before {
  content: "\e907";
}
.icon-github:before {
  content: "\e905";
}
.icon-linkedin:before {
  content: "\e901";
}
.icon-google:before {
  content: "\e902";
}
.icon-whatsapp:before {
  content: "\e903";
}
.icon-facebook:before {
  content: "\e904";
}
.icon-facebook-f:before {
  content: "\e904";
}
.icon-check-circle-o:before {
  content: "\e900";
}

